fixing alignment

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 
 .main-box {
     height: 30rem;
-    width: 60rem;
+    width: 70rem;
     margin-top: 10rem;
     position: absolute;
     top: 3rem;
@@ -50,7 +50,7 @@ body {
 }
 
 .column-text {
-    width: 100%;
+    width: 100rem;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -68,6 +68,16 @@ body {
     margin-top: 3.5rem;
     display: flex;
     align-items: center;
+    justify-content: left;
+}
+
+.question-holder {
+    width: 10rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
 }
 
 .grid {
@@ -118,4 +128,8 @@ body {
 
 .response {
     font-size: 1.2rem;
+}
+
+.question {
+    text-align: center;
 }
